--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,8 @@
       </a>
       <div class="trigger">
         <a class="page-link" href="/about">About</a>
-        <a class="page-link" href="/projects">Projects</a>
+        <a class="page-link" href="/projects">Docs</a>
+        <a class="page-link" href="/posts">News</a>
       </div>
     </nav>
 
