--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Chat to us on Slack for help and support</li>
-        <li><a href=https://slack-invite-ibm-cloud-tech.mybluemix.net/</a></li>
+        <li>Chat to us on [Slack](https://slack-invite-ibm-cloud-tech.mybluemix.net) for help and support</li>
       </ul>
     </div>
 
@@ -37,7 +36,7 @@
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">IBM Cloud Transformation Advisor is a free tool developed by IBM and is available from the Catalog when you install IBM Cloud Private</p>
+      <p class="text">Copyright and trademarks IBM © Copyright IBM Corporation 2018</p>
     </div>
 
   </div>
