--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Chat to us on [Slack](https://slack-invite-ibm-cloud-tech.mybluemix.net) for help and support</li>
+        <li>Chat to us on  <a href="https://slack-invite-ibm-cloud-tech.mybluemix.net">Slack</a> for further help</li>
       </ul>
     </div>
 
