--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
       <div class="trigger">
         <a class="page-link" href="/about">About</a>
         <a class="page-link" href="/projects">Docs</a>
+        <a class="page-link" href="/FAQ">FAQ</a>
         <a class="page-link" href="/posts">News</a>
       </div>
     </nav>
