--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
         <a class="page-link" href="/about">About</a>
         <a class="page-link" href="/projects">Docs</a>
         <a class="page-link" href="./FAQ">FAQ</a>
-        <a class="page-link" href="./posts">News</a>
+        <a class="page-link" href="/_posts">News</a>
       </div>
     </nav>
 
