--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         </svg>
       </a>
       <div class="trigger">
-        <a class="page-link" href="/about">About</a>
+        <a class="page-link" href="/FAQ">FAQ</a>
         <a class="page-link" href="/projects">Docs</a>
       </div>
     </nav>
