--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       </a>
       <div class="trigger">
         <a class="page-link" href="/FAQ">FAQ</a>
-        <a class="page-link" href="/docs">Docs</a>
+        <a class="page-link" href="/doc">Docs</a>
       </div>
     </nav>
 
