--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
       <div class="trigger">
         <a class="page-link" href="/FAQ">FAQ</a>
         <a class="page-link" href="/doc">Docs</a>
+        <a class="page-link" href="/video">Videos</a>
       </div>
     </nav>
 
