--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,9 +36,9 @@
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">Copyright and trademarks IBM© Copyright IBM Corporation 2018</p>
+      <p class="text">Copyright IBM© Corporation 2018</p>
     </div>
 
   </div>
-
+<script src="/assets/js/youtube.js"></script>
 </footer>
