--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       </a>
       <div class="trigger">
         <a class="page-link" href="/">Home</a>
-        <a class="page-link" href="/FAQ">FAQ</a>
+        <a class="page-link" href="/FAQ/categories">FAQ</a>
         <a class="page-link" href="/doc">Docs</a>
         <a class="page-link" href="/video">Videos</a>
         <a class="page-link" href="/news">What's New</a>
