--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ a:visited { color: #205caa; }
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   background-color: #000000;
-  background-image: url("../_assets/headerbg.jpg"); 
+  background-image: url(../_assets/headerbg.jpg); 
   background-position: 100% 100%;
   background-repeat: no-repeat;
 }
