--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,10 @@ a:visited { color: #205caa; }
 .site-footer {
   border-top: 1px solid #e8e8e8;
   padding: 30px 0;
+  background-color: #000000;
+  background-image: url(./headerbg.jpg); 
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 .footer-heading {
