--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,9 +20,9 @@
         <a class="page-link" href="/">Home</a>
         <a class="page-link" href="/FAQ/categories">FAQ</a>
         <a class="page-link" href="/doc">Docs</a>
+        <a class="page-link" href="/API">APIs</a>
         <a class="page-link" href="/video">Videos</a>
         <a class="page-link" href="/news">What's New</a>
-
       </div>
     </nav>
 
